[package]
name = "algojourney-rust-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.18", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"]}
